@@ -630,6 +630,9 @@ input.column-boolean {
         text-align: left;
         text-align: start;
     }
+    .form-link {
+        display: none;
+    }
 }
 
 @media screen and (max-width: @screen-xs-max) {
